# Vandi_data_center

./: README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
generated_exports/: generated_dataset_1_20260421_134240.csv  generated_dataset_1_20260421_192702.csv
logs/: operations.jsonl
sample_data/: customer_profiles.csv  messy_events.csv  sales_orders.csv
src/astrodata_tool/: __init__.py  analytics.py  data_cleaner.py  data_exporter.py  data_filter.py  data_generator.py  data_loader.py  data_merger.py  data_profiler.py  data_transformer.py  data_validator.py  engine.py  exceptions.py  logger.py  models.py
tests/: conftest.py
tests/integration/: test_engine_workflow.py
tests/unit/: test_analytics.py  test_data_generator.py  test_filter_validator.py  test_loader.py  test_profiler_cleaner.py  test_transformer_merger_exporter.py
