[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrodata-automation"
version = "0.1.0"
description = "Local data automation tool for profiling, cleaning, validating, transforming, merging, and exporting datasets."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
